--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "@devjana",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.20.2",
+    "express": "^4.16.4",
+    "pg": "^8.11.0"
   }
 }
