--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bootstrap-sweetalert": "^1.0.1",
     "express": "^4.16.4",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "sweetalert": "^2.1.2"
   }
 }
